syntax = "proto3";

package operators;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


service Operators {
    rpc List (ListOperatorsRequest) returns (ListOperatorsResponse) {
        option (google.api.http) = {
            get: "/v1/scenes/{scene_id}/operators"
        };
    }
    rpc Get (GetOperatorRequest) returns (Operator) {
        option (google.api.http) = {
            get: "/v1/scenes/{scene_id}/operators/{operator_id}"
        };
    }
    rpc Create (CreateOperatorRequest) returns (Operator) {
        option (google.api.http) = {
            post: "/v1/scenes/{scene_id}/operators"
            body: "operator"
        };
    }
    rpc Update (UpdateOperatorRequest) returns (Operator) {
        option (google.api.http) = {
            put: "/v1/scenes/{scene_id}/operators/{operator_id}"
            body: "operator"
        };
    }
    rpc Delete (DeleteOperatorRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/scenes/{scene_id}/operators/{operator_id}"
        };
    }
}

message Operator {
    int64 id = 1;
}

message ListOperatorsRequest {
    int64 scene_id = 1;
    int32 page_size = 2;
    string page_token = 3;
}

message ListOperatorsResponse {
    repeated Operator operators = 1;
    string next_page_token = 2;
}

message GetOperatorRequest {
    int64 scene_id = 1;
    int64 operator_id = 2;
}

message CreateOperatorRequest {
    int64 scene_id = 1;
    Operator operator = 2;
}

message UpdateOperatorRequest {
    int64 scene_id = 1;
    int64 operator_id = 2;
    Operator operator = 3;
}

message DeleteOperatorRequest {
    int64 scene_id = 1;
    int64 operator_id = 2;
}
